Fix weird gaps on small devices

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1300px) and (min-width: 0px) {
+  body {
+    width:1300px;
+  }
+}
+
 html{
 	overflow-y:scroll;
 }
